--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a href="" class="slider__btn btn">К услуге</a>
                         </div>
                         <div class="slider__image">
-                            <img src="/img/slide1.svg" alt="home">
+                            <img src="../img/slide1.svg" alt="home">
                         </div>
                     </div>
 
@@ -59,7 +59,7 @@
         </div>
         <div class="services__items">
             <div class="services__item item-1">
-                <div class="services__image"><img src="/img/Group 28.svg" alt=""></div>
+                <div class="services__image"><img src="../img/Group 28.svg" alt=""></div>
                 <span class="services__sale">от 1000 руб/1 стр</span>
                 <h3 class="services__title">work1</h3>
                 <p class="services__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure
@@ -69,7 +69,7 @@
 
             </div>
             <div class="services__item item-1">
-                <div class="services__image"><img src="/img/img-3 2.svg" alt=""></div>
+                <div class="services__image"><img src="../img/img-3 2.svg" alt=""></div>
                 <span class="services__sale">от 3000</span>
                 <h3 class="services__title">work1</h3>
                 <p class="services__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure
@@ -78,7 +78,7 @@
 
             </div>
             <div class="services__item item-1">
-                <div class="services__image"><img src="/img/Group 32.svg" alt=""></div>
+                <div class="services__image"><img src="../img/Group 32.svg" alt=""></div>
                 <span class="services__sale">от 500 руб</span>
                 <h3 class="services__title">work1</h3>
                 <p class="services__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure
@@ -116,7 +116,7 @@
         </div>
         <div class="portfolio__items">
             <div class="portfolio__item item-1">
-                <div class="portfolio__image"><img src="/img/Frame 5 3.svg" alt=""></div>
+                <div class="portfolio__image"><img src="../img/Frame 5 3.svg" alt=""></div>
                 <h3 class="portfolio__title">work1</h3>
                 <p class="portfolio__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure ratione
                     aperiam culpa alias quibusdam veniam repellat magnam quaerat enim.</p>
@@ -124,7 +124,7 @@
 
             </div>
             <div class="portfolio__item item-1">
-                <div class="portfolio__image"><img src="/img/Frame 5 3.svg" alt=""></div>
+                <div class="portfolio__image"><img src="../img/Frame 5 3.svg" alt=""></div>
                 <h3 class="portfolio__title">work1</h3>
                 <p class="portfolio__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure
                     ratione aperiam culpa alias quibusdam veniam repellat magnam quaerat enim.</p>
@@ -132,7 +132,7 @@
 
             </div>
             <div class="portfolio__item item-1">
-                <div class="portfolio__image"><img src="/img/Frame 5 3.svg" alt=""></div>
+                <div class="portfolio__image"><img src="../img/Frame 5 3.svg" alt=""></div>
                 <h3 class="portfolio__title">work1</h3>
                 <p class="portfolio__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure
                     ratione aperiam culpa alias quibusdam veniam repellat magnam quaerat enim.</p>
