--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </header>
     <nav class="navigation navigation-left">
-        <div class="logo"><img src="/img/logo.svg" alt="logo"></div>
+        <div class="logo"><img src="../img/logo.svg" alt="logo"></div>
         <ul class="navigation__list">
             <li class="navigation__link link__active"><a href="#slider-1"><i class="fas fa-home fa-lg"></i></a></li>
             <li class="navigation__link"><a href="#services"><i class="fas fa-money-check-alt fa-lg"></i></a></li>
