--- a/index.html
+++ b/index.html
@@ -34,6 +34,56 @@
                         </div>
                     </div>
 
+                    <div class="slider__item slide-2">
+
+                        <div class="slider__content">
+                            <span class="slider__name">/Главная</span>
+                            <h2 class="slider__title">Всем привет!</h2>
+                            <p class="slider__text">Разнообразный и богатый опыт новая модель организационной
+                                деятельности позволяет выполнять важные задания по разработке дальнейших направлений
+                                развития. Задача организации, в особенности же дальнейшее развитие различных форм
+                                деятельности играет важную роль в формировании соответствующий условий активизации.
+                            </p>
+                            <a href="" class="slider__btn btn">К услуге</a>
+                        </div>
+                        <div class="slider__image">
+                            <img src="/img/..slide2.svg" alt="home">
+                        </div>
+                    </div>
+
+                    <div class="slider__item slide-3">
+
+                        <div class="slider__content">
+                            <span class="slider__name">/Главная</span>
+                            <h2 class="slider__title">Всем привет!</h2>
+                            <p class="slider__text">Разнообразный и богатый опыт новая модель организационной
+                                деятельности позволяет выполнять важные задания по разработке дальнейших направлений
+                                развития. Задача организации, в особенности же дальнейшее развитие различных форм
+                                деятельности играет важную роль в формировании соответствующий условий активизации.
+                            </p>
+                            <a href="" class="slider__btn btn">К услуге</a>
+                        </div>
+                        <div class="slider__image">
+                            <img src="/img/..slide3.svg" alt="home">
+                        </div>
+                    </div>
+
+                    <div class="slider__item slide-4">
+
+                        <div class="slider__content">
+                            <span class="slider__name">/Главная</span>
+                            <h2 class="slider__title">Всем привет!</h2>
+                            <p class="slider__text">Разнообразный и богатый опыт новая модель организационной
+                                деятельности позволяет выполнять важные задания по разработке дальнейших направлений
+                                развития. Задача организации, в особенности же дальнейшее развитие различных форм
+                                деятельности играет важную роль в формировании соответствующий условий активизации.
+                            </p>
+                            <a href="" class="slider__btn btn">К услуге</a>
+                        </div>
+                        <div class="slider__image">
+                            <img src="/img/..slide4.svg" alt="home">
+                        </div>
+                    </div>
                 </div>
             </div>
             <a class="slider__control slider__control_prev" href="#" role="button"></a>
@@ -41,13 +91,21 @@
         </div>
     </header>
     <nav class="navigation navigation-left">
-        <div class="logo"><img src="../img/logo.svg" alt="logo"></div>
+        <div class="logo"><img src="/img/logo.svg" alt="logo"></div>
+        <div class="navigation__burger">
+            <span></span>
+        </div>
         <ul class="navigation__list">
-            <li class="navigation__link link__active"><a href="#slider-1"><i class="fas fa-home fa-lg"></i></a></li>
-            <li class="navigation__link"><a href="#services"><i class="fas fa-money-check-alt fa-lg"></i></a></li>
-            <li class="navigation__link"><a href="#about"><i class="fas fa-id-badge fa-lg"></i></a></li>
-            <li class="navigation__link"><a href="#portfolio"><i class="fas fa-list-alt fa-lg"></i></a></li>
-            <li class="navigation__link"><a href="#contacts"><i class="fas fa-address-card fa-lg"></i></a></i></li>
+            <li class="navigation__link link__active"><a href="#slider-1"><i
+                        class="fas fa-home fa-lg"></i><span>Главная</span></a></li>
+            <li class="navigation__link"><a href="#services"><i
+                        class="fas fa-money-check-alt fa-lg"></i><span>Главная</span></a></li>
+            <li class="navigation__link"><a href="#about"><i class="fas fa-id-badge fa-lg"></i><span>Главная</span></a>
+            </li>
+            <li class="navigation__link"><a href="#portfolio"><i
+                        class="fas fa-list-alt fa-lg"></i><span>Главная</span></a></li>
+            <li class="navigation__link"><a href="#contacts"><i
+                        class="fas fa-address-card fa-lg"></i><span>Главная</span></a></i></li>
             <li class="navigation__link"></li>
         </ul>
         <li class="navigation__social"><a href="#"><i class="fab fa-vk fa-lg"></i></a></li>
@@ -59,7 +117,7 @@
         </div>
         <div class="services__items">
             <div class="services__item item-1">
-                <div class="services__image"><img src="../img/Group 28.svg" alt=""></div>
+                <div class="services__image"><img src="../img/slide2.svg" alt=""></div>
                 <span class="services__sale">от 1000 руб/1 стр</span>
                 <h3 class="services__title">work1</h3>
                 <p class="services__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure
@@ -69,7 +127,7 @@
 
             </div>
             <div class="services__item item-1">
-                <div class="services__image"><img src="../img/img-3 2.svg" alt=""></div>
+                <div class="services__image"><img src="../img/slide3.svg" alt=""></div>
                 <span class="services__sale">от 3000</span>
                 <h3 class="services__title">work1</h3>
                 <p class="services__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure
@@ -78,7 +136,7 @@
 
             </div>
             <div class="services__item item-1">
-                <div class="services__image"><img src="../img/Group 32.svg" alt=""></div>
+                <div class="services__image"><img src="../img/slide4.svg" alt=""></div>
                 <span class="services__sale">от 500 руб</span>
                 <h3 class="services__title">work1</h3>
                 <p class="services__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure
@@ -116,7 +174,7 @@
         </div>
         <div class="portfolio__items">
             <div class="portfolio__item item-1">
-                <div class="portfolio__image"><img src="../img/Frame 5 3.svg" alt=""></div>
+                <div class="portfolio__image"><img src="/img/..Frame 5 3.svg" alt=""></div>
                 <h3 class="portfolio__title">work1</h3>
                 <p class="portfolio__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure ratione
                     aperiam culpa alias quibusdam veniam repellat magnam quaerat enim.</p>
@@ -124,7 +182,7 @@
 
             </div>
             <div class="portfolio__item item-1">
-                <div class="portfolio__image"><img src="../img/Frame 5 3.svg" alt=""></div>
+                <div class="portfolio__image"><img src="/img/..Frame 5 3.svg" alt=""></div>
                 <h3 class="portfolio__title">work1</h3>
                 <p class="portfolio__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure
                     ratione aperiam culpa alias quibusdam veniam repellat magnam quaerat enim.</p>
@@ -132,7 +190,7 @@
 
             </div>
             <div class="portfolio__item item-1">
-                <div class="portfolio__image"><img src="../img/Frame 5 3.svg" alt=""></div>
+                <div class="portfolio__image"><img src="/img/..Frame 5 3.svg" alt=""></div>
                 <h3 class="portfolio__title">work1</h3>
                 <p class="portfolio__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure
                     ratione aperiam culpa alias quibusdam veniam repellat magnam quaerat enim.</p>
@@ -160,6 +218,7 @@
             <form action="#" method="post">
                 <input type="text" placeholder="Введите ФИО">
                 <input type="text" placeholder="Введите E-mail">
+                <input type="text" placeholder="Введите номер телефона (необязательно)">
                 <input type="text" placeholder="Услуга">
                 <textarea name="comment">Напишите подробности</textarea>
                 <button type="submit" class="contacts__btn">Отправить</button>
@@ -172,6 +231,8 @@
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="../js/menu.js"></script>
+    <script src="../js/slider.js"></script>
 </body>
 
 </html>
