--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <a href="" class="slider__btn btn">К услуге</a>
                         </div>
                         <div class="slider__image">
-                            <img src="/img/..slide2.svg" alt="home">
+                            <img src="../img/slide2.svg" alt="home">
                         </div>
                     </div>
 
@@ -64,7 +64,7 @@
                             <a href="" class="slider__btn btn">К услуге</a>
                         </div>
                         <div class="slider__image">
-                            <img src="/img/..slide3.svg" alt="home">
+                            <img src="../img/slide3.svg" alt="home">
                         </div>
                     </div>
 
@@ -81,7 +81,7 @@
                             <a href="" class="slider__btn btn">К услуге</a>
                         </div>
                         <div class="slider__image">
-                            <img src="/img/..slide4.svg" alt="home">
+                            <img src="../img/slide4.svg" alt="home">
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
         </div>
     </header>
     <nav class="navigation navigation-left">
-        <div class="logo"><img src="/img/logo.svg" alt="logo"></div>
+        <div class="logo"><img src="../img/logo.svg" alt="logo"></div>
         <div class="navigation__burger">
             <span></span>
         </div>
@@ -99,13 +99,13 @@
             <li class="navigation__link link__active"><a href="#slider-1"><i
                         class="fas fa-home fa-lg"></i><span>Главная</span></a></li>
             <li class="navigation__link"><a href="#services"><i
-                        class="fas fa-money-check-alt fa-lg"></i><span>Главная</span></a></li>
-            <li class="navigation__link"><a href="#about"><i class="fas fa-id-badge fa-lg"></i><span>Главная</span></a>
+                        class="fas fa-money-check-alt fa-lg"></i><span>Услуги</span></a></li>
+            <li class="navigation__link"><a href="#about"><i class="fas fa-id-badge fa-lg"></i><span>О себе</span></a>
             </li>
             <li class="navigation__link"><a href="#portfolio"><i
-                        class="fas fa-list-alt fa-lg"></i><span>Главная</span></a></li>
+                        class="fas fa-list-alt fa-lg"></i><span>Портфолио</span></a></li>
             <li class="navigation__link"><a href="#contacts"><i
-                        class="fas fa-address-card fa-lg"></i><span>Главная</span></a></i></li>
+                        class="fas fa-address-card fa-lg"></i><span>Контакты</span></a></i></li>
             <li class="navigation__link"></li>
         </ul>
         <li class="navigation__social"><a href="#"><i class="fab fa-vk fa-lg"></i></a></li>
@@ -174,7 +174,7 @@
         </div>
         <div class="portfolio__items">
             <div class="portfolio__item item-1">
-                <div class="portfolio__image"><img src="/img/..Frame 5 3.svg" alt=""></div>
+                <div class="portfolio__image"><img src="../img/Frame 5 3.svg" alt=""></div>
                 <h3 class="portfolio__title">work1</h3>
                 <p class="portfolio__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure ratione
                     aperiam culpa alias quibusdam veniam repellat magnam quaerat enim.</p>
@@ -182,7 +182,7 @@
 
             </div>
             <div class="portfolio__item item-1">
-                <div class="portfolio__image"><img src="/img/..Frame 5 3.svg" alt=""></div>
+                <div class="portfolio__image"><img src="../img/Frame 5 3.svg" alt=""></div>
                 <h3 class="portfolio__title">work1</h3>
                 <p class="portfolio__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure
                     ratione aperiam culpa alias quibusdam veniam repellat magnam quaerat enim.</p>
@@ -190,13 +190,14 @@
 
             </div>
             <div class="portfolio__item item-1">
-                <div class="portfolio__image"><img src="/img/..Frame 5 3.svg" alt=""></div>
+                <div class="portfolio__image"><img src="../img/Frame 5 3.svg" alt=""></div>
                 <h3 class="portfolio__title">work1</h3>
                 <p class="portfolio__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque iure
                     ratione aperiam culpa alias quibusdam veniam repellat magnam quaerat enim.</p>
                 <a href="#" class="portfolio__btn btn">Подробнее</a>
 
             </div>
+
         </div>
         <div class="portfolio__footer">
             <a href="#" class="portfolio__link">показать все</a>
@@ -231,8 +232,8 @@
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="../js/menu.js"></script>
-    <script src="../js/slider.js"></script>
+    <script src="/js/menu.js"></script>
+    <script src="/js/slider.js"></script>
 </body>
 
 </html>
