--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="/js/menu.js"></script>
-    <script src="/js/slider.js"></script>
+    <script src="../js/menu.js"></script>
+    <script src="../js/slider.js"></script>
 </body>
 
 </html>
